crates/edifact-rs-derive/tests/ui/fail_tuple_struct.stderr
error: EdifactSerialize/EdifactDeserialize only support structs with named fields
  --> $DIR/fail_tuple_struct.rs:14:1
   |
14 | struct Tuple(String);
   | ^^^^^^
